Code Refactoring; Improved Log Messages